--- a/styles/global.css
+++ b/styles/global.css
@@ -96,3 +96,13 @@ footer {
         color: green;
         box-shadow: 1px 12px 15px -13px 65%;
     }
+
+    div p {
+        margin: 0px 5px 0px 5px;
+        padding: 0px 12px 0px 12px;
+    }
+
+    #previous-polls-container div {
+        margin: 0px 5px 0px 5px;
+        padding: 0px 12px 0px 12px;
+    }
