--- a/styles/global.css
+++ b/styles/global.css
@@ -10,6 +10,8 @@ body {
     background: var(--background);
     display: grid;
     grid-template-rows: auto 1fr auto;
+    background: rgb(34, 193, 195);
+        background: linear-gradient(0deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
 }
 
 header {
@@ -21,6 +23,8 @@ header {
 
 main {
     padding: 20px;
+    display: flex;
+    justify-content: center;
 }
 
 footer {
@@ -32,159 +36,69 @@ footer {
     background-color: var(--footer-background);
 }
 
-#past-polls-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+.options {
     margin: 10px;
+    padding: 10px;
 }
 
-#current-polls-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+.votes {
+display: inline-block;
+width: 50%;
+margin: 20px;
+padding: 10px;
+text-align: center;
+font-size: 1.2rem;
 }
 
-button {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-buttons #left-buttons {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-
-main {
-    display: grid;
-    grid-template-columns: 3fr 1fr 3fr;
-    grid-template-rows: repeat(9, 1fr);
-    grid-template-areas:
-        "current"
-        "question"
-        "option1 . option2"
-        "opt1++ . opt2++"
-        "opt1-- . opt2--"
-        " . save-poll . "
-        " . question-asked . "
-        "opt1asked . opt2asked"
-        " . create . "
-
-    ;
-
-}
-
-h1 {
-    grid-area: current;
-    grid-row: span 3;
-    align-self: center;
-    justify-self: center;
-    font-size: 2em;
-    font-weight: bold;
-    color: green;
-    box-shadow: 1px 12px 15px -13px 65%;
-}
-
-#left-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    grid-area: question;
-    grid-row: span 3;
-    grid-column: 1 / span 2;
-}
-
-#current-poll-div {
-    font-size: 1.6rem;
-    display: grid;
-}
-
-p {
-    display: inline-block;
-    padding: 5px;
-    text-align: center;
-    margin: 50px;
-}
-
-#current--poll-container {
-    margin: 40px 0px 20px 0px;
-
-}
-
-#left-buttons {
+#option-one-plus-btn {
     float: left;
     clear: left;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    grid-area: option1;
-    grid-row: span 2;
-    grid-column: 1 / 2;
-    padding: 5px;
-    margin: 0px 20px 0px 20px;
 }
-
+#option-one-minus-btn {
+    float: left;
+    clear: left;
+}
+#option-two-plus-btn {
+    float: right;
+}
+#option-two-minus-btn {
+    float: right;
+}
 
 h1 {
-    font-size: 2.5rem;
-}
-
-#question {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     text-align: center;
-    width: 100%;
 }
 
-input {
-    font-size: 1.2rem;
-    margin: 0px 5px 0px 5px;
+.votes-one {
+    float: left;
+}
+
+.votes-two {
+    float: right;
+}
+
+.option-one {
+    float: left;
+}
+
+.option-two {
+    float: right;
 }
 
 button {
-    font-size: 1.2rem;
-    padding: 5px;
+    box-shadow: 3px 3px 25px -17px rgba(0, 0, 0, 85%);
+    background-color: rgba(255, 166, 0, 0.774);
+    border: none;
     border-radius: 5px;
-    box-shadow: 5px 5px 13px -3px rgba(0, 0, 0, 0.75);
-        margin: 30px 30% 20px 30%;
-}
-
-#create-poll-btn, #save-poll-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 20%;
-    text-align: center;
-    margin: 10px 30% 0px 30%;
-}
-
-#right-buttons {
-    float: right;
-    clear: right;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    grid-area: option2;
-    grid-row: 1 / 2;
-    grid-column: 3 / 4;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 700;
+    color: rgba(0, 0, 0, 0.603);
+    margin: 10px;
     padding: 5px;
-    margin: 0px 20px 0px 20px;
 }
 
-#right-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    grid-area: option1;
-    grid-row: span 3;
-    grid-column: 3 / span 2;
+button:hover {
+    transform: scale(1.1);
+    transition: .2s;
+    box-shadow: 1px 1px 3px green, -1px -1px 3px blue;
 }
